    (Prasad Chakka via zshao)

    HIVE-352. Column-based storage format RCFile.
    (Yongqiang He via zshao)

    HIVE-420. Support regular expressions for column names
    (Zheng Shao via namit)

    HIVE-463. Add a pre execution hook to ql
    (Ashish Thusoo via prasadc)

    HIVE-476. Add getTable and getPartition calls to the ReadEntity and
     WriteEntity objects in PreExecute hooks. (Ashish Thsoo via prasadc)

  IMPROVEMENTS
    HIVE-389. Option to build without ivy (jssarma)

    HIVE-360. Generalize the FileFormat Interface in Hive.
    (He Yongqiang via zshao)

    HIVE-406. Build file improvements. (Joydeep Sen Sarma via zshao).

    HIVE-254. Link jobtracker from Hive History in Hive Web Interface.
    (Edward Capriolo via athusoo)

    HIVE-502. Optimize RCFile's performance by removeing all synchronized
    modifiers. (Yongqiang He via zshao)

    HIVE-204. Provide option to run tests with MiniMRCluster.
    (Namit Jain via athusoo)

    HIVE-511. Make DoubleWritable's hashCode more uniform.
    (Zheng Shao via rmurthy)

  OPTIMIZATIONS

    HIVE-279. Predicate Pushdown support (Prasad Chakka via athusoo).

    HIVE-266. Use Text instead of String (Zheng Shao via namit).

    HIVE-427. Add missing config parameters in hive-default.xml.
    (Namit Jain via zshao)

    HIVE-462. Avoid Text->String->Text conversion (Namit Jain via zshao)

  BUG FIXES

    HIVE-381. Fix JDBC HiveResultSet's next function.
    (Kim P via namit)

    HIVE-387. Use URI from FileSystem Object instead of from HADOOPFS
    directly. (jssarma)

    HIVE-385. Split Driver's run into compile and execute.
    (Neil Conway via namit)

    HIVE-393. Remove unnecessary checks in movetask for file type.
    (Zheng Shao via namit)

    HIVE-403. remove password param from job config that is submitted to job
    tracker and from log (Prasad Chakka)

    HIVE-407. fix permissions for test scripts in release tarball.
    (Ashish Thusoo via namit)
