@@ -31,7 +31,10 @@ Trunk - Unreleased
     (Ashish Thusoo via prasadc)
 
     HIVE-476. Add getTable and getPartition calls to the ReadEntity and
-     WriteEntity objects in PreExecute hooks. (Ashish Thsoo via prasadc)
+     WriteEntity objects in PreExecute hooks. (Ashish Thusoo via prasadc)
+
+    HIVE-518. Add test mode to hive where input tables are sampled. This
+    (Namit Jain via rmurthy)
 
   IMPROVEMENTS
     HIVE-389. Option to build without ivy (jssarma)
